Download JDK 21 version, updated project